<resources>
    <string name="app_name">news-eat-fronted</string>

    <!--    메뉴-->
    <string name="menu_home">홈</string>
    <string name="menu_category">카테고리</string>
    <string name="menu_bookmark">북마크</string>
    <string name="menu_mypage">마이페이지</string>

    <string name="news_eat_name">뉴잇</string>
    <!--    <string name="news_eat_name_en">News eat</string>-->
    <string name="news_eat_slogan">내 취향에 맞게\n편안한 뉴스만</string>
    <string name="news_eat_slogan2">내 취향에 맞게 편안한 뉴스만</string>

    <!--    회원가입, 로그인-->

    <string name="login_find_email">이메일 찾기</string>
    <string name="login_find_pw">비밀번호 찾기</string>

    <string name="header_title_sign_up">회원가입</string>

    <string name="sign_up_email_title">이메일 주소</string>
    <string name="sign_up_email_hint1">이메일</string>
    <string name="sign_up_email_hint2">인증번호</string>

    <string name="sign_up_pw_title">비밀번호</string>
    <string name="sign_up_pw_hint1">비밀번호 (영문, 숫자 조합 8-16자)</string>
    <string name="sign_up_pw_hint2">비밀번호 확인 (영문, 숫자 조합 8-16자)</string>
    <string name="pw_info_error1">영문, 숫자 조합 8-16자</string>
    <string name="pw_info_error2">비밀번호를 다시 확인해주세요.</string>
    <string name="pw_modify_title">변경할 비밀번호</string>
    <string name="pw_modify_title2">비밀번호 확인</string>

    <string name="button_login">로그인</string>
    <string name="button_verify">인증하기</string>
    <string name="button_resend">재전송</string>
    <string name="button_confirm">확인</string>
    <string name="button_next">다음</string>
    <string name="button_finish">완료</string>
    <string name="button_modify">변경하기</string>

    <string name="email_verify_sent">인증번호가 발송되었습니다.</string>
    <string name="email_verify_error">인증번호를 다시 확인해주세요.</string>
    <string name="email_verify_success">인증이 완료되었습니다.</string>
    <string name="email_verify_duplicate">이미 가입된 이메일입니다.</string>

    <string name="sign_up_nickname_title">뉴잇에 오신걸 환영해요!\n어떻게 불러드릴까요?</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="sign_up_nickname_hint">닉네임을 입력하세요</string>

    <string name="select_category_title">관심있는 주제를 선택해주세요\n(1개 이상 3개 이하)</string>
    <string name="category_sports">스포츠</string>
    <string name="category_culture">생활/문화</string>
    <string name="category_economy">경제</string>
    <string name="category_entertainment">연예</string>
    <string name="category_politics">정치</string>
    <string name="category_science">IT/과학</string>
    <string name="category_social">사회</string>
    <string name="category_world">세계</string>

    <string name="find_pw_info">이메일로 인증코드를 발송해 드려요</string>

    <!--    홈-->
    <string name="home_news_detox">뉴스 디톡스 모드</string>
    <string name="home_category_news_title">%s님을 위한 맞춤 뉴스</string>
    <string name="home_positive_news_title">기분 좋아지는 뉴스만 쏙쏙!\n긍정태그가 달린 뉴스들만 모아봤어요😉</string>

    <!--    카테고리-->
    <string name="category_news_more">더보기</string>
    <string name="search_hint">검색어를 입력하세요.</string>
    <string name="search_no_content">일치하는 검색 결과가 없어요.</string>


    <!--    마이페이지-->
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_edit_nickname"><u>닉네임 변경</u></string>
    <string name="mypage_member_name">%s님</string>
    <string name="mypage_greeting">%s님! \n오늘 하루도 뉴스와 함께 힐링하세요</string>

    <!-- 마이페이지 닉네임 변경 -->
    <string name="mypage_edit_nicnkame_title">닉네임</string>

    <!--    마이페이지 메뉴 리스트-->
    <string name="mypage_menu_tts_title">TTS 설정</string>
    <string name="mypage_menu_interest_title">관심사 수정</string>
    <string name="mypage_menu_profile_title">회원정보 수정</string>
    <string name="mypage_menu_logout_title">로그아웃</string>
    <string name="mypage_menu_withdraw_title">회원탈퇴</string>

    <!--    마이페이지 다이얼로그-->
    <string name="mypage_logout_title">로그아웃 하시겠어요?</string>
    <string name="mypage_logout_content">언제든지 다시 로그인하실 수 있어요.</string>
    <string name="mypage_delete_title">정말 탈퇴하시겠어요?</string>
    <string name="mypage_delete_content">탈퇴시, 계정은 삭제되며 복구되지 않습니다.</string>
    <string name="dialog_btn_cancel">취소하기</string>
    <string name="dialog_btn_logout">로그아웃</string>
    <string name="dialog_btn_delete">탈퇴하기</string>

    <!--    북마크된 뉴스 다이얼로그-->
    <string name="bookmarked_news_delete_title">정말 삭제하시겠어요?</string>
    <string name="bookmarked_news_delete_content">뉴잇은 최신 뉴스만 제공하므로, 삭제 후에는 뉴스를 다시 확인할 수 없습니다.</string>
    <string name="dialog_btn_delete_bookmarked_news">삭제하기</string>

    <!-- 북마크 -->
    <string name="bookmark_title">북마크한 뉴스</string>

    <!-- 북마크 카드 뷰-->
    <string name="bookmark_card_view_title">%s</string>
    <string name="bookmark_card_view_category">%s</string>
    <string name="bookmark_card_view_date">%s</string>

    <!-- 뉴스 상세 뷰-->
    <string name="news_detail_title">%s</string>
    <string name="news_detail_publisher">%s</string>
    <string name="news_detail_date">%s</string>
    <string name="news_detail_category">%s</string>
    <string name="news_detail_sentiment">%s</string>
    <string name="news_detail_content">%s</string>
    <string name="news_detail_summary_button">뉴스요약 확인하기</string>
    <string name="news_summary_title">%s</string>
    <string name="news_summary_positive">긍정</string>
    <string name="news_summary_negative">부정</string>

    <string name="news_detail_recommend_title">추천 뉴스 더보기</string>

    <!-- TTS 설정-->
    <string name="tts_title_setting">슬라이더를 이용해 TTS의 목소리 속도와 높낮이를 조절해보세요!</string>
    <string name="tts_title_speed">속도 설정</string>
    <string name="tts_title_pitch">높낮이 설정</string>
    <string name="tts_btn_play">샘플 재생</string>
    <string name="tts_btn_reset">초기화</string>
    <string name="tts_speed_slow">느리게</string>
    <string name="tts_speed_fast">빠르게</string>
    <string name="tts_pitch_low">낮게</string>
    <string name="tts_pitch_high">높게</string>


    <!--    스낵바 메시지-->
    <string name="snackbar_login_error">아이디 또는 비밀번호가 잘못되었습니다.</string>
    <string name="snackbar_bookmark_deleted">북마크에서 제거됐어요.</string>
    <string name="sanckbar_time_out">인증시간이 만료되었습니다.</string>
    <string name="sanckbar_select_maximum">최대 3개까지 선택가능합니다.</string>
    <string name="snackbar_session_expired">세션이 만료되었습니다. 다시 로그인해 주세요.</string>
    <string name="snackbar_nickname_update_success">닉네임이 변경되었어요.</string>
    <string name="snackbar_nickname_update_fail">닉네임 변경에 실패했어요. 다시 시도해주세요.</string>
    <string name="snackbar_nickname">닉네임을 입력해주세요.</string>
    <string name="snackbar_category_unselected">최소 1개의 관심사를 선택해주세요.</string>
    <string name="snackbar_category_update_success">관심사가 변경되었어요.</string>
    <string name="snackbar_category_update_fail">관심사 변경에 실패했어요. 다시 시도해주세요.</string>
    <string name="snackbar_logout_completed">로그아웃되었습니다.</string>
    <string name="snackbar_withdraw_completed">회원 탈퇴가 완료되었습니다.</string>
    <string name="snackbar_password_changed">비밀번호가 변경되었습니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>