<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_email_title"
        android:textAppearance="@style/TextAppearance.NewsEat.Body1"
        android:textColor="@color/Gray700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="55dp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/selector_input"
        android:hint="@string/sign_up_email_hint1"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.NewsEat.Body3"
        android:textColor="@color/Gray700"
        android:textColorHint="@color/Gray400"
        app:layout_constraintTop_toBottomOf="@id/email_title"
        app:layout_constraintStart_toStartOf="@id/email_title"
        app:layout_constraintEnd_toStartOf="@id/btn_verify_email"
        android:layout_marginTop="12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_verify_email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/selector_button"
        android:text="@string/button_verify"
        android:textAppearance="@style/TextAppearance.NewsEat.Body3"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_email"
        android:layout_marginLeft="12dp"
        android:enabled="false" />

    <EditText
        android:id="@+id/input_verify_code"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/selector_input"
        android:hint="@string/sign_up_email_hint2"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.NewsEat.Body3"
        android:textColor="@color/Gray700"
        android:textColorHint="@color/Gray400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        app:layout_constraintEnd_toStartOf="@id/btn_confirm_code"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3:00"
        android:textAppearance="@style/TextAppearance.NewsEat.Title7"
        android:textColor="@color/Gray500"
        app:layout_constraintTop_toTopOf="@id/input_verify_code"
        app:layout_constraintBottom_toBottomOf="@id/input_verify_code"
        app:layout_constraintEnd_toEndOf="@id/input_verify_code"
        android:layout_marginEnd="12dp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_code"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/selector_button"
        android:text="@string/button_confirm"
        android:textAppearance="@style/TextAppearance.NewsEat.Body3"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/input_verify_code"
        app:layout_constraintTop_toTopOf="@id/input_verify_code"
        android:layout_marginLeft="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false" />

    <TextView
        android:id="@+id/info_email_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_verify_sent"
        android:textAppearance="@style/TextAppearance.NewsEat.Body8"
        android:textColor="@color/Gray500"
        app:layout_constraintTop_toBottomOf="@id/input_verify_code"
        app:layout_constraintStart_toStartOf="@id/input_verify_code"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/pw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_pw_title"
        android:textAppearance="@style/TextAppearance.NewsEat.Body1"
        android:textColor="@color/Gray700"
        app:layout_constraintTop_toBottomOf="@id/info_email_verification"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_pw"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_input"
        android:hint="@string/sign_up_pw_hint1"
        android:maxLines="1"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.NewsEat.Body3"
        android:textColor="@color/Gray700"
        android:textColorHint="@color/Gray400"
        app:layout_constraintTop_toBottomOf="@id/pw_title"
        android:layout_marginTop="12dp" />

    <ImageView
        android:id="@+id/show_pw_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/btn_pw_invisible"
        app:layout_constraintTop_toTopOf="@id/input_pw"
        app:layout_constraintBottom_toBottomOf="@id/input_pw"
        app:layout_constraintEnd_toEndOf="@id/input_pw"
        android:layout_marginEnd="12dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/info_pw_error1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw_info_error1"
        android:textAppearance="@style/TextAppearance.NewsEat.Body8"
        android:textColor="@color/StatusError"
        app:layout_constraintTop_toBottomOf="@id/input_pw"
        app:layout_constraintStart_toStartOf="@id/pw_title"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/input_pw_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_input"
        android:hint="@string/sign_up_pw_hint2"
        android:maxLines="1"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.NewsEat.Body3"
        android:textColor="@color/Gray700"
        android:textColorHint="@color/Gray400"
        app:layout_constraintTop_toBottomOf="@id/info_pw_error1"
        android:layout_marginTop="6dp"
        app:layout_goneMarginTop="12dp"/>

    <ImageView
        android:id="@+id/show_pw_confirm_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/btn_pw_invisible"
        app:layout_constraintTop_toTopOf="@id/input_pw_confirm"
        app:layout_constraintBottom_toBottomOf="@id/input_pw_confirm"
        app:layout_constraintEnd_toEndOf="@id/input_pw_confirm"
        android:layout_marginEnd="12dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/info_pw_error2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw_info_error2"
        android:textAppearance="@style/TextAppearance.NewsEat.Body8"
        android:textColor="@color/StatusError"
        app:layout_constraintTop_toBottomOf="@id/input_pw_confirm"
        app:layout_constraintStart_toStartOf="@id/input_pw_confirm"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>