<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/dialog_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackDeemed">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/background_rounded_image"
        android:paddingHorizontal="26dp"
        android:paddingVertical="24dp">
        
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_logout_title"
            android:textAppearance="@style/TextAppearance.NewsEat.Body1"
            android:textColor="@color/Gray800"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_logout_content"
            android:textAppearance="@style/TextAppearance.NewsEat.Body3"
            android:textColor="@color/Gray500"
            app:layout_constraintTop_toBottomOf="@id/dialog_title"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/Gray300"
            android:background="@drawable/selector_button"
            android:text="@string/dialog_btn_cancel"
            android:textAppearance="@style/TextAppearance.NewsEat.Body3"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@id/dialog_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="9dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/selector_button"
            android:backgroundTint="@color/Primary600"
            android:text="@string/dialog_btn_logout"
            android:textAppearance="@style/TextAppearance.NewsEat.Body3"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>